Version: 07115012b

Info
07062011b Info feature: Added the alliance name to the city title
07072011f Info feathre: Added Jason's UI modifications to show the wall status

Attack
07012011a Attack bug: found that scanMapBusy was being set to true when dat.done in butSearchNow(). Fixed
07012011a Attack feature: Added 'Clear' button and checkbox to allow users to clear the last attacked field in the target list. This allows the user to start at the top of the list again rather than wherever they last left off.
07012011a Attack bug: mapObject array had information in it when map is transferred causing some wrong map types to exist in the target list. I zero the array length before copying the new target list in butTransfer(). Fixed
07022011a Attack feature (private build only): Append alliance name to city/outpost target list
07032011f Attack bug: selected map name was set to 'Anthropus Camp' but was being checked as 'AntCamp' causing the radio button to never be selected. Fixed
07032011g Attack bug: butSearch did not transfer the map to the target. Fixed
07042011c Attack bug: troopsChanged would not allow more than 100000 troops to be sent at once. Changed to 120000. Fixed
07062011a Attack feature: adjust max march to correspond to the muster point level. Fixed

Train
07012011a Training feature: added third outpost and Firetroops. Guessed at new troop name: Djinn - will replace when I see what the actual name is
07012011a Training bug: Stonetroop (and Firetroop) training not supported through checkReqs. Will add when I can build them.
07032011i Training feature: Added a check for queue space before calling runJob to lighten the load on the server and reduce/eliminate turning auto-train off because of errors